maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit){
    keepHandOnSideWall()}
  prendBiscuit()
  }


def keepHandOnSideWall() {
  if (!estFaceMur){
    gavance}
  else{ while(estFaceMur())
       droite()}
  avance()
  }
  